--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="/study-material/maths.html"target="_main1"><img src="https://i.pinimg.com/originals/0b/01/f4/0b01f49f6c609fc9e03a59284303f3c2.jpg"alt="<i>maths</i>"height="200"></a>
             </td>
             <td>
-                <a href="/physics.html"target="_main2"><img src="https://images.shiksha.com/mediadata/images/articles/1681209899php8OqvF2.jpeg"alt="<i>physics</i>"height="200"></a>
+                <a href="../physics.html"target="_main2"><img src="https://images.shiksha.com/mediadata/images/articles/1681209899php8OqvF2.jpeg"alt="<i>physics</i>"height="200"></a>
             </td>
             <td>
                 <a href="/chemistry.html"target="_main3"><img src="https://cf.ppt-online.org/files1/slide/n/NtroLAfYXiZxIcMak4p5PgE9q63GvnKJyes7hCW8RO/slide-0.jpg"alt="<i>chemistry</i>"height="200"></a>
