--- a/maths.html
+++ b/maths.html
@@ -75,22 +75,22 @@
             <div class="course-card">
                 <h3>MTH111</h3>
                 <p>Calculus I</p>
-                <a href="/mth111.html" class="btn">View Course</a>
+                <a href="../mth111.html" class="btn">View Course</a>
             </div>
             <div class="course-card">
                 <h3>MTH112</h3>
                 <p>Calculus II</p>
-                <a href="/mth112.html" class="btn">View Course</a>
+                <a href="../mth112.html" class="btn">View Course</a>
             </div>
             <div class="course-card">
                 <h3>MTH113</h3>
                 <p>Linear Algebra</p>
-                <a href="/mth113.html" class="btn">View Course</a>
+                <a href="../mth113.html" class="btn">View Course</a>
             </div>
             <div class="course-card">
                 <h3>MTH114</h3>
                 <p>Differential equations</p>
-                <a href="/mth114.html" class="btn">View Course</a>
+                <a href="../mth114.html" class="btn">View Course</a>
             </div>
         </section>
     </main>
