--- a/physics.html
+++ b/physics.html
@@ -80,27 +80,27 @@
             <div class="course-card">
                 <h3>PHY111</h3>
                 <p> Physic Lab</p>
-                <a href="/phy111.html" class="btn">View Course</a>
+                <a href="../phy111.html" class="btn">View Course</a>
             </div>
             <div class="course-card">
                 <h3>PHY112</h3>
                 <p>classical dynamics</p>
-                <a href="/phy112.html" class="btn">View Course</a>
+                <a href="../phy112.html" class="btn">View Course</a>
             </div>
             <div class="course-card">
                 <h3>PHY113</h3>
                 <p>Electromagnetism</p>
-                <a href="/phy113.html" class="btn">View Course</a>
+                <a href="../phy113.html" class="btn">View Course</a>
             </div>
             <div class="course-card">
                 <h3>PHY114</h3>
                 <p>Quantum Mechanics</p>
-                <a href="/phy114.html" class="btn">View Course</a>
+                <a href="../phy114.html" class="btn">View Course</a>
             </div>
             <div class="course-card">
                 <h3>PHY115</h3>
                 <p>SHM and Oscillation</p>
-                <a href="/phy115.html" class="btn">View Course</a>
+                <a href="../phy115.html" class="btn">View Course</a>
             </div>
         </section>
     </main>
