--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            <tr><th colspan="4"><h3><big>SUBJECT</big></h3></th></tr>
            <tr>
             <td>
-                <a href="../maths.html"target="_main1"><img src="https://i.pinimg.com/originals/0b/01/f4/0b01f49f6c609fc9e03a59284303f3c2.jpg"alt="<i>maths</i>"height="200"></a>
+                <a href="maths.html"target="_main1"><img src="https://i.pinimg.com/originals/0b/01/f4/0b01f49f6c609fc9e03a59284303f3c2.jpg"alt="<i>maths</i>"height="200"></a>
             </td>
             <td>
                 <a href="../physics.html"target="_main2"><img src="https://images.shiksha.com/mediadata/images/articles/1681209899php8OqvF2.jpeg"alt="<i>physics</i>"height="200"></a>
