--- a/elc.html
+++ b/elc.html
@@ -70,17 +70,17 @@
             <div class="course-card">
                 <h3>ELC111</h3>
                 <p>Basic English</p>
-                <a href="/elc111.html" class="btn">View Course</a>
+                <a href="elc111.html" class="btn">View Course</a>
             </div>
             <div class="course-card">
                 <h3>ELC112</h3>
                 <p> Intermaidate English</p>
-                <a href="/elc112.html" class="btn">View Course</a>
+                <a href="elc112.html" class="btn">View Course</a>
             </div>
             <div class="course-card">
                 <h3>ELC113</h3>
                 <p>Advance English</p>
-                <a href="/elc113.html" class="btn">View Course</a>
+                <a href="elc113.html" class="btn">View Course</a>
             </div>
         </section>
     </main>
