--- a/chemistry.html
+++ b/chemistry.html
@@ -70,23 +70,23 @@
             <div class="course-card">
                 <h3>CHM111</h3>
                 <p>Chemistry Lab</p>
-                <a href="/chm111.html" class="btn">View Course</a>
+                <a href="chm111.html" class="btn">View Course</a>
             </div>
             <div class="course-card">
                 <h3>CHM112</h3>
                 <p>Physical Chemistry</p>
-                <a href="/chm112.html" class="btn">View Course</a>
+                <a href="chm112.html" class="btn">View Course</a>
             </div>
             <div class="course-card">
                 <h3>CHM113</h3>
                 <p>Organic and Inorganic Chemistry</p>
-                <a href="/chm113.html" class="btn">View Course</a>
+                <a href="chm113.html" class="btn">View Course</a>
             </div>
         </section>
     </main>
     <footer>
         <p>Contact us at info@example.com</p>
-        <p>&copy; 2023 Course Catalog</p>
+        <p>&copy; 2025 Course Catalog</p>
     </footer>
 </body>
 </html>
