--- a/esc.html
+++ b/esc.html
@@ -70,23 +70,23 @@
             <div class="course-card">
                 <h3>ESC111</h3>
                 <p>Foundamental of computing 1</p>
-                <a href="/esc111.html" class="btn">View Course</a>
+                <a href="esc111.html" class="btn">View Course</a>
             </div>
             <div class="course-card">
                 <h3>ESC112</h3>
                 <p>Foundamental of computing 2</p>
-                <a href="/esc112.html" class="btn">View Course</a>
+                <a href="esc112.html" class="btn">View Course</a>
             </div>
             <div class="course-card">
                 <h3>ESC113</h3>
                 <p>MAT Lab</p>
-                <a href="/esc113.html" class="btn">View Course</a>
+                <a href="esc113.html" class="btn">View Course</a>
             </div>
         </section>
     </main>
     <footer>
         <p>Contact us at info@example.com</p>
-        <p>&copy; 2023 Course Catalog</p>
+        <p>&copy; 2025 Course Catalog</p>
     </footer>
 </body>
 </html>
