--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+ <!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -30,56 +30,63 @@
     </main>
     <footer>
         <p>Contact us at info@example.com</p>
-        <p>&copy; 2023 Course Catalog</p>
+        <p>&copy; 2025 Course Catalog</p>
     </footer>
 </body>
-</html>  
-<!-- <!DOCTYPE html>
+</html>   -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Course Catalog</title>
-    <link rel="stylesheet" href="styleindex.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Study Material</title>
+    <link rel="stylesheet" href="styleindex.css" />
 </head>
 <body>
     <header>
-        <h1>Course Catalog</h1>
+        <h1>📚 Study Material Portal</h1>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#subjects">Subjects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
-        <section>
+        <section class="intro">
             <h2>Welcome Students!</h2>
-            <p>Explore our courses below.</p>
+            <p>Explore and enhance your learning. Select a subject below to get started.</p>
         </section>
-        <section class="course-grid">
+
+        <section id="subjects" class="course-grid">
             <div class="course-card">
-                <img src=" https://i.pinimg.com/originals/0b/01/f4/0b01f49f6c609fc9e03a59284303f3c2.jpg" alt="Mathematics">
-                <h3>Mathematics</h3>
-                <a href="/maths.html">View Courses</a>
+                <img src="https://i.pinimg.com/originals/0b/01/f4/0b01f49f6c609fc9e03a59284303f3c2.jpg" alt="Mathematics" />
+                 <h3>Mathematics</h3>
+                <a href="maths.html"target="_main1">Explore Maths</a>
             </div>
             <div class="course-card">
-                <img src=" https://images.shiksha.com/mediadata/images/articles/1681209899php8OqvF2.jpeg" alt="Physics">
+                <img src="https://images.shiksha.com/mediadata/images/articles/1681209899php8OqvF2.jpeg" alt="Physics" />
                 <h3>Physics</h3>
-                <a href="/physics.html">View Courses</a>
+                <a href="physics.html"target="_main2">Explore Physics</a>
             </div>
             <div class="course-card">
-                <img src="https://cf.ppt-online.org/files1/slide/n/NtroLAfYXiZxIcMak4p5PgE9q63GvnKJyes7hCW8RO/slide-0.jpg" alt="Chemistry">
+                <img src="https://cf.ppt-online.org/files1/slide/n/NtroLAfYXiZxIcMak4p5PgE9q63GvnKJyes7hCW8RO/slide-0.jpg" alt="Chemistry" />
                 <h3>Chemistry</h3>
-                <a href="/chemistry.html">View Courses</a>
+                <a href="chemistry.html"target="_main3">Explore Chemistry</a>
             </div>
-             <div class="course-card">
-                 <img src="https://th.bing.com/th/id/OIP.zWN8VP3ySvteIhH3LtgLBwHaCh?rs=1&pid=ImgDetMain"alt="other courses">
-                 <h3>Other courses</h3>
-                 <a href="/others.html">View Courses</a>
-             </div>
+            <div class="course-card">
+                <img src="https://th.bing.com/th/id/OIP.zWN8VP3ySvteIhH3LtgLBwHaCh?rs=1&pid=ImgDetMain" alt="Other Courses" />
+                <h3>Other Courses</h3>
+                <a href="others.html"target="_main4">Explore Others</a>
+            </div>
         </section>
-    </main>-->
-     
- 
+    </main>
+
+    <footer id="contact">
+        <p>Contact us: <a href="mailto:info@example.com">info@example.com</a></p>
+        <p>&copy; 2025 Study Material Portal. All rights reserved.</p>
+    </footer>
+</body>
+</html>
