--- a/mth111.html
+++ b/mth111.html
@@ -73,7 +73,7 @@
             </ul>
         </section>
 
-        <section class="course-section course-resources">
+        <!-- <section class="course-section course-resources">
             <h2>Course Resources</h2>
             <ul>
                 <li> <a href="mth111pyq.html"target="_main7"><big>📚 <i>PYQS</i></big></a></li>
@@ -86,23 +86,26 @@
       
                 <li> <a href="mth111amnotes.html"target="_main11"><big>📄  <i>AM Notes</i></big></a></li>
                 
-       </ul> 
+       </ul>  -->
+       <section class="course-section resources">
+        <h2>Course Resources</h2>
+        <div class="card-grid"><ul>
+          <li><a class="card" href="mth111pyq.html">📚 Past Year Questions</a></li>
+         <li> <a class="card" href="mth111assignment.html">📝 Assignments</a></li>
+         <li> <a class="card" href="mth111classnotes.html">📒 Class Notes</a></li>
+         <li> <a class="card" href="mth111practice.html">🧠 Practice Problems</a></li>
+         <li> <a class="card" href="mth111amnotes.html">📄 Additional Material Notes</a></li>
+          </ul>
+        </div>
+      </section>
         </section>
 
-        <!-- <section class="course-section assessment-evaluation">
-            <h2>Assessment and Evaluation</h2>
-            <p>The course will be assessed through a combination of quizzes, assignments, and a final exam.</p>
-            <ul>
-                <li>Quizzes: 20%</li>
-                <li>Assignments: 30%</li>
-                <li>Final Exam: 50%</li>
-            </ul>
-        </section> -->
+  
     </main>
 
     <footer>
         <p>Contact us at <a href="mailto:info@example.com">info@example.com</a></p>
-        <p>&copy; 2023 Course Catalog</p>
+        <p>&copy; 2025 Course Catalog</p>
     </footer>
 </body>
 </html>
