--- a/mth114.html
+++ b/mth114.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,5 +15,83 @@
              <li> <a href="/mth114practice problems.html"><button><big>🧠  <i>Practice Problems</i></big></button></a></li><br/>
              <li> <a href="/mth114amnotes.html"><button><big>📄  <i>AM Notes</i></big></button></a></li><br/>
     </ul>  
+</body>
+</html> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MTH114 - Differential Equations</title>
+    <link rel="stylesheet" href="stylemth.css">
+</head>
+<body>
+    <header>
+        <h1>MTH114 - Differential Equations</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <img src=" https://th.bing.com/th/id/R.e08e4d5703a31384bb9e1654290d8e66?rik=D6AqAXcFLT28cQ&riu=http%3a%2f%2fwww.lyonsdendesign.co.uk%2fwp-content%2fuploads%2f2013%2f08%2ffeatures.jpg&ehk=B85e6n8zNM2Yc8k5TdBd0X0UqhkU5ftOdS73aB8L398%3d&risl=&pid=ImgRaw&r=0" alt="Differential Equations Banner">
+        <div class="hero-text">
+            <h2>Welcome to MTH114 - Differential Equations</h2>
+            <p>Explore the theory and applications of differential equations in various fields.</p>
+        </div>
+    </section>
+
+    <main>
+        <section class="course-section course-description">
+            <h2>Course Description</h2>
+            <p>This course covers the fundamental concepts of differential equations, including first-order and higher-order equations, systems of equations, and applications.</p>
+            <ul>
+                <li>Credits: 6</li>
+                <li>Prerequisites: MTH111 - Calculus I, MTH112 - Calculus II, MTH113 - Linear Algebra</li>
+            </ul>
+        </section>
+
+        <section class="course-section course-outline">
+            <h2>Course Outline</h2>
+            <ul>
+                <li>Introduction to Differential Equations</li>
+                <li>First-Order Differential Equations</li>
+                <li>Higher-Order Differential Equations</li>
+                <li>Systems of Differential Equations</li>
+               
+            </ul>
+        </section>
+
+        <!-- <section class="course-section course-resources">
+            <h2>Course Resources</h2>
+            <ul>
+                <li><a href="mth114pyq.html">📚 Past Year Questions</a></li>
+                <li><a href="mth114assignment.html">📝 Assignments</a></li>
+                <li><a href="mth114classnotes.html">📒 Class Notes</a></li>
+                <li><a href="mth114practice.html">🧠 Practice Problems</a></li>
+                <li><a href="mth114amnotes.html">📄 Additional Material Notes</a></li>
+            </ul>
+        </section> -->
+        <section class="course-section resources">
+            <h2>Course Resources</h2>
+            <div class="card-grid"><ul>
+              <li><a class="card" href="mth114pyq.html">📚 Past Year Questions</a></li>
+             <li> <a class="card" href="mth114assignment.html">📝 Assignments</a></li>
+             <li> <a class="card" href="mth114classnotes.html">📒 Class Notes</a></li>
+             <li> <a class="card" href="mth114practice.html">🧠 Practice Problems</a></li>
+             <li> <a class="card" href="mth114amnotes.html">📄 Additional Material Notes</a></li>
+              </ul>
+            </div>
+          </section>
+    </main>
+
+    <footer>
+        <p>Contact us at <a href="mailto:info@example.com">info@example.com</a></p>
+        <p>&copy; 2025 Course Catalog</p>
+    </footer>
 </body>
 </html>
