--- a/mth112.html
+++ b/mth112.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,5 +19,75 @@
              <br/>
              <li> <a href="/mth112amnotes.html"><button><big>📄  <i>AM Notes</i></big></button></a></li><br/>
     </ul>  
+</body>
+</html> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MTH112 - Calculus II</title>
+    <link rel="stylesheet" href="stylemth.css">
+</head>
+<body>
+    <header>
+        <h1>MTH112 - Calculus II</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                
+            </ul>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <img src=" https://th.bing.com/th/id/R.e08e4d5703a31384bb9e1654290d8e66?rik=D6AqAXcFLT28cQ&riu=http%3a%2f%2fwww.lyonsdendesign.co.uk%2fwp-content%2fuploads%2f2013%2f08%2ffeatures.jpg&ehk=B85e6n8zNM2Yc8k5TdBd0X0UqhkU5ftOdS73aB8L398%3d&risl=&pid=ImgRaw&r=0" alt="Calculus Banner">
+        <div class="hero-text">
+            <h2>Welcome to MTH112 - Calculus II</h2>
+            <p>Explore the  applications of calculus and introduction to different theorem for area, surface aera and volume.</p>
+        </div>
+    </section>
+
+    <main>
+        <section class="course-section course-description">
+            <h2>Course Description</h2>
+            <p>This course introduces the applications of calculus and introduction to different theorem for area, surface aera and volume.</p>
+            <ul>
+                <li>Credits: 6</li>
+                <!-- <li>Prerequisites: MTH110 - Pre-Calculus</li> -->
+            </ul>
+        </section>
+
+        <section class="course-section course-outline">
+            <h2>Course Outline</h2>
+            <ul>
+                <li>  </li>
+                <li>  </li>
+                <li>  </li>
+                <li>  </li>
+                <li>  </li>
+            </ul>
+        </section>
+
+         <section class="course-section resources">
+        <h2>Course Resources</h2>
+        <div class="card-grid"><ul>
+          <li><a class="card" href="mth112pyq.html">📚 Past Year Questions</a></li>
+         <li> <a class="card" href="mth112assignment.html">📝 Assignments</a></li>
+         <li> <a class="card" href="mth112classnotes.html">📒 Class Notes</a></li>
+         <li> <a class="card" href="mth112practice.html">🧠 Practice Problems</a></li>
+         <li> <a class="card" href="mth112amnotes.html">📄 Additional Material Notes</a></li>
+          </ul>
+        </div>
+      </section>
+  
+    </main>
+
+    <footer>
+        <p>Contact us at <a href="mailto:info@example.com">info@example.com</a></p>
+        <p>&copy; 2025 Course Catalog</p>
+    </footer>
 </body>
 </html>
