--- a/mth111.html
+++ b/mth111.html
@@ -90,11 +90,11 @@
        <section class="course-section resources">
         <h2>Course Resources</h2>
         <div class="card-grid"><ul>
-          <li><a class="card" href="mth111pyq.html">📚 Past Year Questions</a></li>
-         <li> <a class="card" href="mth111assignment.html">📝 Assignments</a></li>
-         <li> <a class="card" href="mth111classnotes.html">📒 Class Notes</a></li>
-         <li> <a class="card" href="mth111practice.html">🧠 Practice Problems</a></li>
-         <li> <a class="card" href="mth111amnotes.html">📄 Additional Material Notes</a></li>
+          <li><a class="card" href="mth111pyq.html"target="_main5">📚 Past Year Questions</a></li>
+         <li> <a class="card" href="mth111assignment.html"target="_main6">📝 Assignments</a></li>
+         <li> <a class="card" href="mth111classnotes.html"target="_main7">📒 Class Notes</a></li>
+         <li> <a class="card" href="mth111practice.html"target="_main8">🧠 Practice Problems</a></li>
+         <li> <a class="card" href="mth111amnotes.html"target="_main9">📄 Additional Material Notes</a></li>
           </ul>
         </div>
       </section>
